quiche-csbindgen.g.cs


        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_path_event_reused_source_connection_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_reused_source_connection_id(quiche_path_event* ev, ulong* id, sockaddr_storage* old_local, uint* old_local_len, sockaddr_storage* old_peer, uint* old_peer_len, sockaddr_storage* local, uint* local_len, sockaddr_storage* peer, uint* peer_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_path_event_peer_migrated", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_peer_migrated(quiche_path_event* ev, sockaddr_storage* local, uint* local_len, sockaddr_storage* peer, uint* peer_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_path_event_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_free(quiche_path_event* ev);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_retire_dcid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_retire_dcid(quiche_conn* conn, ulong dcid_seq);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_paths_iter", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_socket_addr_iter* quiche_conn_paths_iter(quiche_conn* conn, sockaddr* from, nuint from_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_socket_addr_iter_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_socket_addr_iter_next(quiche_socket_addr_iter* iter, sockaddr_storage* peer, nuint* peer_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_socket_addr_iter_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_socket_addr_iter_free(quiche_socket_addr_iter* iter);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_path_validated", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_is_path_validated(quiche_conn* conn, sockaddr* from, nuint from_len, sockaddr* to, nuint to_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_free(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_put_varint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_put_varint(byte* buf, nuint buf_len, ulong val);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_get_varint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_get_varint(byte* buf, nuint buf_len, ulong* val);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_config_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_h3_config* quiche_h3_config_new();

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_config_set_max_field_section_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_set_max_field_section_size(quiche_h3_config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_config_set_qpack_max_table_capacity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_set_qpack_max_table_capacity(quiche_h3_config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_config_set_qpack_blocked_streams", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_set_qpack_blocked_streams(quiche_h3_config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_config_enable_extended_connect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_enable_extended_connect(quiche_h3_config* config, [MarshalAs(UnmanagedType.U1)] bool enabled);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_config_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_free(quiche_h3_config* config);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_conn_new_with_transport", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_h3_conn* quiche_h3_conn_new_with_transport(quiche_conn* quiche_conn, quiche_h3_config* config);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_conn_poll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long quiche_h3_conn_poll(quiche_h3_conn* conn, quiche_conn* quic_conn, quiche_h3_event** ev);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_event_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_event_type(quiche_h3_event* ev);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_event_for_each_header", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_event_for_each_header(quiche_h3_event* ev, delegate* unmanaged[Cdecl]<byte*, nuint, byte*, nuint, void*, int> cb, void* argp);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_for_each_setting", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_for_each_setting(quiche_h3_conn* conn, delegate* unmanaged[Cdecl]<ulong, ulong, void*, int> cb, void* argp);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_event_headers_has_body", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_h3_event_headers_has_body(quiche_h3_event* ev);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_extended_connect_enabled_by_peer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_h3_extended_connect_enabled_by_peer(quiche_h3_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_event_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_event_free(quiche_h3_event* ev);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_send_request", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long quiche_h3_send_request(quiche_h3_conn* conn, quiche_conn* quic_conn, quiche_h3_header* headers, nuint headers_len, [MarshalAs(UnmanagedType.U1)] bool fin);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_send_response", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_send_response(quiche_h3_conn* conn, quiche_conn* quic_conn, ulong stream_id, quiche_h3_header* headers, nuint headers_len, [MarshalAs(UnmanagedType.U1)] bool fin);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_send_response_with_priority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_send_response_with_priority(quiche_h3_conn* conn, quiche_conn* quic_conn, ulong stream_id, quiche_h3_header* headers, nuint headers_len, quiche_h3_priority* priority, [MarshalAs(UnmanagedType.U1)] bool fin);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_send_body", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_h3_send_body(quiche_h3_conn* conn, quiche_conn* quic_conn, ulong stream_id, byte* body, nuint body_len, [MarshalAs(UnmanagedType.U1)] bool fin);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_recv_body", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_h3_recv_body(quiche_h3_conn* conn, quiche_conn* quic_conn, ulong stream_id, byte* @out, nuint out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_send_goaway", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_send_goaway(quiche_h3_conn* conn, quiche_conn* quic_conn, ulong id);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_parse_extensible_priority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_parse_extensible_priority(byte* priority, nuint priority_len, quiche_h3_priority* parsed);

        /// <summary>
        ///  Sends a PRIORITY_UPDATE frame on the control stream with specified
        ///  request stream ID and priority.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_send_priority_update_for_request", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_send_priority_update_for_request(quiche_h3_conn* conn, quiche_conn* quic_conn, ulong stream_id, quiche_h3_priority* priority);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_take_last_priority_update", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_take_last_priority_update(quiche_h3_conn* conn, ulong prioritized_element_id, delegate* unmanaged[Cdecl]<byte*, ulong, void*, int> cb, void* argp);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_dgram_enabled_by_peer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_h3_dgram_enabled_by_peer(quiche_h3_conn* conn, quiche_conn* quic_conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_conn_stats", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_conn_stats(quiche_h3_conn* conn, quiche_h3_stats* @out);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_h3_conn_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_conn_free(quiche_h3_conn* conn);


    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct sockaddr
    {
        public uint ss_family;
        public fixed byte data[16];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct sockaddr_storage
    {
        public uint ss_family;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct timespec
    {
        public long tv_sec;
        public long tv_nsec;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_config
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_conn
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_recv_info
    {
        public sockaddr* from;
        public uint from_len;
        public sockaddr* to;
        public uint to_len;
    }
